--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,11 @@ itsdangerous==2.2.0
 Jinja2==3.1.5
 MarkupSafe==3.0.2
 marshmallow==3.26.0
+marshmallow-sqlalchemy==0.29.0
 packaging==24.2
 SQLAlchemy==2.0.37
 typing_extensions==4.12.2
 Werkzeug==3.1.3
 gunicorn==21.2.0
+flask-jwt-extended==4.5.3
+
