--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,12 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^1.3.4",
     "cra-template": "1.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-scripts": "5.0.1",
     "react-router-dom": "^6.10.0",
-    "react-scripts": "^3.0.1"
+    "axios": "^1.3.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -36,3 +36,4 @@
     ]
   }
 }
+
